--- a/web/sub.html
+++ b/web/sub.html
@@ -23,8 +23,8 @@ sub.on('message', function (topic, message) { // message is Buffer
   data = message.toString()
   //console.log("sub: " + msg);
   data_list = data.split(',').map(Number);
-  console.log("data list");
-  console.log(data_list);
+  //console.log("data list");
+  //console.log(data_list);
 });
 
 </script> 
